Fix tabstrip not collapsing when sharing parent with other items

--- a/packages/lab/src/tabs-next/TabstripNext.css
+++ b/packages/lab/src/tabs-next/TabstripNext.css
@@ -7,7 +7,7 @@
   position: relative;
   background: transparent;
   width: 100%;
-
+  overflow: hidden;
   font-family: var(--salt-text-fontFamily);
   font-size: var(--salt-text-fontSize);
   font-weight: var(--salt-text-fontWeight);
